Fix some layout issues in event#show

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -243,12 +243,14 @@ ul.likeme {
     
     h3 {
       margin-top: 0;
-      margin-bottom: 0;
+      margin-bottom: 5px;
       line-height: 18px;
     }
     
     p {
       margin: 0;
+      font-size: 12px;
+      line-height: normal;
     }
     
     .footer {
